# ollama-model-example

./: .gitignore  docker-compose.yaml  example-giga-rag.py  example-openai-langchain.py  example-openapi-api-call.py  example-rag-llm.py  pyproject.toml
