[project]
name = "ollama-model-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.10",
    "langchain-openai>=0.3.35",
    "langchain-redis>=0.2.4",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
]

